plugins {
    id 'java-library'
}

repositories {
    jcenter()
}

sourceCompatibility = 1.8

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    
    api "org.slf4j:slf4j-api:1.7.25"
    api "org.apache.logging.log4j:log4j-api:2.17.1"
    api "org.apache.logging.log4j:log4j-core:2.17.1"
    api "org.apache.logging.log4j:log4j-slf4j-impl:2.17.1"
    
    implementation 'org.reflections:reflections:0.10.2'
}
